Updated Product Images

--- a/WebContent/Thankyou.html
+++ b/WebContent/Thankyou.html
@@ -5,6 +5,28 @@
 <title>Thank You!</title>
 <link rel="stylesheet" type="text/css" href="./css/categories.css">
 </head>
+<body background="background.jpg">
+		<ul class="nav">
+			<li><a href="index.html" target="">Home</a></li>
+			<li><a href="categories.jsp" target="">Categories</a></li>
+			<li><a href="About Us.html" target="">About Us</a></li>
+			<li><a href="ContactUs.html" target="">Contact Us</a></li>
+		</ul>
+<h1><font color="white"><center>Your order has been placed!</center></font></h1>
+	<p><font color="white"><center>Your Items will be delivered to the address that is provided.<br/> You will soon receive a confirmation email.</center></font></p>
+	<p><font color="white"><center>Thank You for shopping with us. We hope to see you again soon.</center></font><p>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Thank You!</title>
+<link rel="stylesheet" type="text/css" href="./css/categories.css">
+</head>
 <body>
 		<ul class="nav">
 			<li><a href="index.html" target="">Home</a></li>
@@ -18,3 +40,4 @@
 </body>
 </html>
 
+ -->
